--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/b001e2a1a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <p>modificado thur</p>
     <!-- cabeçalho e menu -->
     <header>
         <div class="container">
