--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <!-- fim -->
 
-    <!-- início notícias -->
+    <!-- início posts -->
     <section class="em-destaque" id="posts">
         <div class="container">
             <h2 class="titulo">POSTS EM DESTAQUE</h2>
@@ -63,7 +63,7 @@
 
     </section>
 
-    <!-- fim notícias -->
+    <!-- fim posts -->
 
     <!-- contato -->
     <section class="contato"id= "contact">
