mudei tudo thur

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
                 <ul>
                     <li><a href="posts" class="button">Energias</a></li>
                     <li><a href="contact" class="button">Contato</a></li>
-                    <li><a href="enter" class="button">Entrar ></a></li>
+                    <li><a href="entrar.html" class="button">Entrar ></a></li>
                 </ul>
             </nav>
 
         </div>
     </header>
     <!-- fim -->
+
+    <!--Início Banner-->
+    <section class="banner"></section>
+    <!--Fim Banner-->
 
     <!-- início posts -->
     <section class="em-destaque" id="posts">
@@ -35,25 +39,32 @@
 
             <div class="blocos">
                 <div class="bloco-individual">
-                   <p>  <a href="post1.html"><img src="img/mapa1.jpg" alt="mapa"></a>
-                    Ciclone extratropical causará chuvas intensas nos três estados da região Sul.
-                        Chuvas continuam causando transtornos no Rio Grande do Sul já a vários dias, devido à circulação associada a um cavado localizado sobre o Estado gaúcho. Nesta segunda-feira (25), estava vigente um alerta do Instituto Nacional de Meteorologia (INMET) para chuvas moderadas, ventos de até 60 km/h e queda de granizo.
+                   <p>  <a href="post1.html"><img src="img/solar4.webp" alt="solar"></a>
+                    <h3>Energia solar</h3>
+                    Energia solar é uma fonte alternativa, renovável e sustentável de energia que provém da radiação eletromagnética (luz e calor) emanada diariamente pelo sol. Essa energia pode ser utilizada por diferentes tecnologias, como aquecedores solares, painéis fotovoltaicos e usinas heliotérmicas (ou termossolares).
                     </p>
                 </div>
 
                 <div class="bloco-individual">
-                    <p>  <a href="post2.html"><img src="img/mapa1.jpg" alt="mapa"></a>
-                    Ciclone extratropical causará chuvas intensas nos três estados da região Sul.
-                    Chuvas continuam causando transtornos no Rio Grande do Sul já a vários dias, devido à circulação associada a um cavado localizado sobre o Estado gaúcho. Nesta segunda-feira (25), estava vigente um alerta do Instituto Nacional de Meteorologia (INMET) para chuvas moderadas, ventos de até 60 km/h e queda de granizo.
+                    <p>  <a href="post2.html"><img src="img/eolica3.jpg" alt="eolica"></a>
+                        <h3>Energia eólica</h3>
+                        A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica. Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de poluentes na atmosfera.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
-                    <p>  <a href="post3.html"><img src="img/mapa1.jpg" alt="mapa"></a>
-                    Ciclone extratropical causará chuvas intensas nos três estados da região Sul.
-                    Chuvas continuam causando transtornos no Rio Grande do Sul já a vários dias, devido à circulação associada a um cavado localizado sobre o Estado gaúcho. Nesta segunda-feira (25), estava vigente um alerta do Instituto Nacional de Meteorologia (INMET) para chuvas moderadas, ventos de até 60 km/h e queda de granizo.
+                    <p>  <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidrelétrica"></a>
+                        <h3>Energia hidrelétrica</h3>
+                        A energia hidrelétrica é aquela que é gerada ao transformar a força da água em energia elétrica. Para aproveitar tal força, são construídas grandes infraestruturas hidráulicas capazes de extrair o máximo potencial desse recurso renovável, livre de emissões e que se origina na própria área.
                     </p>
                 </div>
+
+                <div class="bloco-individual">
+                    <p>  <a href="post4.html"><img src="img/Biomassa-1.jpg" alt="biomassa"></a>
+                        <h3>Biomassa</h3>
+                        Biomassa é a matéria orgânica vegetal ou animal usada como fonte de energia limpa e sustentável. Pode ser obtida a partir de lenha, bagaço de cana, resíduos agrícolas, algas, alimentos e esterco, contribuindo para reduzir a dependência de combustíveis fósseis e mitigar emissões de CO2.
+                     </p>
+                 </div>
                 
                 </div>
                     
