--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Clean planet</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/b001e2a1a0.js" crossorigin="anonymous"></script>
+
+    <link rel="icon" type="image/x-icon" href="img/logo3.png">
 </head>
 <body>
     <!-- cabeçalho e menu -->
