--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clean planet</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script src="https://kit.fontawesome.com/b001e2a1a0.js" crossorigin="anonymous"></script> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/b001e2a1a0.js" crossorigin="anonymous"></script>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="img/logo.svg">
@@ -20,7 +20,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="img/logo-verde.png">
+                <img src="img/logo-escrita-1x4.svg">
             </div>
 
             <nav class="menu">
@@ -40,7 +40,7 @@
     <!--Fim Banner-->
 
     <!-- início posts -->
-    <section class="em-destaque" id="posts">
+    <section class="energias" id="posts">
         <div class="container">
             <h2 class="titulo">POSTS EM DESTAQUE</h2>
 
@@ -93,6 +93,16 @@
 
     <!-- fim posts -->
 
+    <!-- Sobre nós -->
+    <section id="sobre">
+        <div class="sobre">
+            <h4 class="titulo">Sobre nós</h4>
+            <p>
+                Nós da Clean Planet somos um site que preza pelo bem-estar do nosso planeta, por isso, trazemos informações sobre energias renováveis
+            </p>
+        </div>
+    </section>
+
     <!-- contato -->
     <section class="contato" id="contact">
         <div class="container">
@@ -134,7 +144,7 @@
                 </div>
             </div>
             <div class="links-medias">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
