--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
             <div class="blocos">
                 <div class="bloco-individual">
-                    <p> <a href="post1.html"><img src="img/solar4.webp" alt="solar"></a>
+                    <a href="post1.html"><img src="img/solar4.webp" alt="solar"></a>
                     <h3>Energia solar</h3>
-                    Energia solar é uma fonte alternativa, renovável e sustentável de energia que provém da radiação
+                    <p>Energia solar é uma fonte alternativa, renovável e sustentável de energia que provém da radiação
                     eletromagnética (luz e calor) emanada diariamente pelo sol. Essa energia pode ser utilizada por
                     diferentes tecnologias, como aquecedores solares, painéis fotovoltaicos e usinas heliotérmicas (ou
                     termossolares).
@@ -56,9 +56,9 @@
                 </div>
 
                 <div class="bloco-individual">
-                    <p> <a href="post2.html"><img src="img/eolica3.jpg" alt="eolica"></a>
+                    <a href="post2.html"><img src="img/eolica3.jpg" alt="eolica"></a>
                     <h3>Energia eólica</h3>
-                    A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
+                    <p>A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
                     ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica.
                     Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de
                     poluentes.
@@ -66,18 +66,18 @@
                 </div>
 
                 <div class="bloco-individual">
-                    <p> <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidrelétrica"></a>
+                    <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidrelétrica"></a>
                     <h3>Energia hidrica</h3>
-                    A energia hidrelétrica é aquela que é gerada ao transformar a força da água em energia elétrica.
+                    <p>A energia hidrelétrica é aquela que é gerada ao transformar a força da água em energia elétrica.
                     Para aproveitar tal força, são construídas grandes infraestruturas hidráulicas capazes de extrair o
                     máximo potencial desse recurso renovável, livre de emissões e que se origina na própria área.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
-                    <p> <a href="post4.html"><img src="img/Biomassa-1.jpg" alt="biomassa"></a>
+                    <a href="post4.html"><img src="img/Biomassa-1.jpg" alt="biomassa"></a>
                     <h3>Biomassa</h3>
-                    Biomassa é a matéria orgânica vegetal ou animal usada como fonte de energia limpa e sustentável.
+                    <p>Biomassa é a matéria orgânica vegetal ou animal usada como fonte de energia limpa e sustentável.
                     Pode ser obtida a partir de lenha, bagaço de cana, resíduos agrícolas, algas, alimentos e esterco,
                     contribuindo para reduzir a dependência de combustíveis fósseis e mitigar emissões de CO2.
                     </p>
@@ -98,7 +98,8 @@
         <div class="sobre">
             <h4 class="titulo">Sobre nós</h4>
             <p>
-                Nós da Clean Planet somos um site que preza pelo bem-estar do nosso planeta, por isso, trazemos informações sobre energias renováveis
+                Nós da Clean Planet somos um site que preza pelo bem-estar do nosso planeta, por isso, trazemos
+                informações sobre energias renováveis
             </p>
         </div>
     </section>
@@ -123,7 +124,7 @@
 
             </div>
         </div>
-    </section> 
+    </section>
 
     <!-- fim contato -->
 
