--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h4 class="titulo">Sobre nós</h4>
             <p>
                 Nós da Clean Planet somos um site que preza pelo bem-estar do nosso planeta, por isso, trazemos
-                informações sobre energias renováveis
+                informações sobre energias renováveis. Queremos fazer com que todos se consientizem do que nosso planeta precisa, especificamente pela nossa principal fonte de sobrevivência: a ENERGIA.
             </p>
         </div>
     </section>
