--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         </div>
     </section>
 
+    <!--  -->
+    <!-- <section class="banner-baixo"></section> -->
+    <!--  -->
+
     <!-- contato -->
     <section class="contato" id="contact">
         <div class="container">
