--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 </div>
 
                 <div class="bloco-individual">
-                    <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidrelétrica"></a>
-                    <h3>Energia hidrica</h3>
+                    <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidráulica"></a>
+                    <h3>Energia hidráulica</h3>
                     <p>A energia hidrelétrica é aquela que é gerada ao transformar a força da água em energia elétrica.
                     Para aproveitar tal força, são construídas grandes infraestruturas hidráulicas capazes de extrair o
                     máximo potencial desse recurso renovável, livre de emissões e que se origina na própria área.
@@ -80,6 +80,26 @@
                     <p>Biomassa é a matéria orgânica vegetal ou animal usada como fonte de energia limpa e sustentável.
                     Pode ser obtida a partir de lenha, bagaço de cana, resíduos agrícolas, algas, alimentos e esterco,
                     contribuindo para reduzir a dependência de combustíveis fósseis e mitigar emissões de CO2.
+                    </p>
+                </div>
+
+                <div class="bloco-individual">
+                    <a href="post5.html"><img src="img/geotermica.webp" alt="geotérmica"></a>
+                    <h3>Energia geotérmica</h3>
+                    <p>A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
+                    ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica.
+                    Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de
+                    poluentes.
+                    </p>
+                </div>
+
+                <div class="bloco-individual">
+                    <a href="post6.html"><img src="img/Usina-oceanica.jpg" alt="oceânica"></a>
+                    <h3>Energia oceânica</h3>
+                    <p>A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
+                    ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica.
+                    Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de
+                    poluentes.
                     </p>
                 </div>
 
