--- a/entrar.html
+++ b/entrar.html
@@ -1,11 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clean planet</title>
 
-    <link rel="stylesheet" href="/css/entrar.css">
+    <link rel="stylesheet" href="css/entrar.css">
 </head>
 <body>
     <div class="login">
@@ -26,4 +26,3 @@
     </div>
 </body>
 </html>
-
