--- a/post1.html
+++ b/post1.html
@@ -18,9 +18,14 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
+            <!-- <div class="logo">
                 <a href="index.html"><img src="img/voltar.png"></a>
-            </div>
+            </div> -->
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html" class="button">Home</a></li>
+                </ul>
+            </nav>
 
         </div>
     </header>
