--- a/post4.html
+++ b/post4.html
@@ -1,75 +1,65 @@
-.parte-login{
-    float: right;
-    background-color: rgba(255, 255, 255, 0.5);
-    height: 963px;
-    width: 30%;
-  }
+<!DOCTYPE html>
+<html lang="pt-br">
 
-.cadastro form {
-    margin-top: 20px;
-    align-items: center;
-  }
-  
-  
-  .cadastro {
-    align-items: center;
-    /* width: 100%; */
-    /* justify-content: center; */
-  }
-  
-  
-  input {
-    margin-top: 12px;
-  }
-  
-  
-  .cadastro input[type='text'],
-  .cadastro input[type='email'] {
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    font-size: 20px;
-    height: 40px;
-    padding-left: 15px;
-    border-radius: 4px;
-    border: 1px solid rgb(67, 141, 44);
-  }
-  
-  
-  /* .cadastro textarea{
-    width: 100%;
-    height: 150px;
-    padding-left: 15px;
-    font-size: 15px;
-    padding-top: 10px;
-    border-radius: 4px;
-    border: 1px solid rgb(67, 141, 44);
-    margin-top: 12PX;
-  } */
-  
-  
-  .botao{
-    display: flex;
-    justify-content: center;
-  }
-  
-  
-  .botao input[type='submit'] {
-    height: 50px;
-    width: 160px;
-    background-color: rgb(67, 141, 44);
-    color: antiquewhite;
-    font-size: 17px;
-    cursor: pointer;
-    border-radius: 7px;
-    border: rgb(67, 141, 44);
-  }
-  
-  .botao input:hover{
-    background-color: rgb(67, 141, 44);
-  }
-  
-  input:focus,
-  textarea:focus{
-    outline-color: rgb(67, 141, 44);
-  }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clean planet</title>
+    <link rel="stylesheet" href="css/post1.css">
+    <script src="https://kit.fontawesome.com/b001e2a1a0.js" crossorigin="anonymous"></script>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="img/logo.svg">
+</head>
+
+<body>
+    <header>
+      <div class="container">
+        <!-- <div class="logo">
+            <a href="index.html"><img src="img/voltar.png"></a>
+        </div> -->
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html" class="button">Home</a></li>
+            </ul>
+        </nav>
+
+    </div>
+    </header>
+
+    <!--Início Banner-->
+    <section class="banner"></section>
+    <!--Fim Banner-->
+
+    <div class="content">
+            <h1 class="titulo">BIOMASSA</h1>
+
+            <div class="textoimg1">
+                <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+    </div>
+
+    <!-- rodapé -->
+    <footer class="rodape">
+        <div class="container-blocos">
+            <div class="footer-col">
+                <h4>Clean Planet</h4>
+                <div class="container-direitos">
+                    <a href="#">Clean planet ©2023 - Todos os direitos reservados.</a>
+                </div>
+            </div>
+            <div class="links-medias">
+                <a href="https://facebook.com" target="Face"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://x.com" target="X"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://youtube.com" target="YT"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://instagram.com" target="insta"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+    </footer>
+    <!-- fim -->
+
+</body>
+
+</html>
