--- a/index.html
+++ b/index.html
@@ -48,58 +48,42 @@
                 <div class="bloco-individual">
                     <a href="post1.html"><img src="img/solar4.webp" alt="solar"></a>
                     <h3>Energia solar</h3>
-                    <p>Energia solar é uma fonte alternativa, renovável e sustentável de energia que provém da radiação
-                    eletromagnética (luz e calor) emanada diariamente pelo sol. Essa energia pode ser utilizada por
-                    diferentes tecnologias, como aquecedores solares, painéis fotovoltaicos e usinas heliotérmicas (ou
-                    termossolares).
+                    <p>A energia solar aproveita a luz do sol para gerar eletricidade de maneira limpa e renovável, desempenhando um papel crucial na transição para fontes de energia.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post2.html"><img src="img/eolica3.jpg" alt="eolica"></a>
                     <h3>Energia eólica</h3>
-                    <p>A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
-                    ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica.
-                    Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de
-                    poluentes.
+                    <p>A energia eólica converte a força do vento em eletricidade, oferecendo uma fonte limpa e renovável para suprir as necessidades energéticas.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidráulica"></a>
                     <h3>Energia hidráulica</h3>
-                    <p>A energia hidrelétrica é aquela que é gerada ao transformar a força da água em energia elétrica.
-                    Para aproveitar tal força, são construídas grandes infraestruturas hidráulicas capazes de extrair o
-                    máximo potencial desse recurso renovável, livre de emissões e que se origina na própria área.
+                    <p>A energia hidráulica utiliza a força da água em movimento para gerar eletricidade, representando uma fonte renovável e sustentável.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post4.html"><img src="img/Biomassa-1.jpg" alt="biomassa"></a>
                     <h3>Biomassa</h3>
-                    <p>Biomassa é a matéria orgânica vegetal ou animal usada como fonte de energia limpa e sustentável.
-                    Pode ser obtida a partir de lenha, bagaço de cana, resíduos agrícolas, algas, alimentos e esterco,
-                    contribuindo para reduzir a dependência de combustíveis fósseis e mitigar emissões de CO2.
+                    <p>A biomassa converte resíduos orgânicos em energia, oferecendo uma fonte sustentável e renovável para a produção de eletricidade e biocombustíveis.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post5.html"><img src="img/geotermica.webp" alt="geotérmica"></a>
                     <h3>Energia geotérmica</h3>
-                    <p>A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
-                    ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica.
-                    Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de
-                    poluentes.
-                    </p>
+                    <p>A energia geotérmica utiliza o calor interno da Terra para gerar eletricidade, proporcionando uma fonte limpa e renovável.  </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post6.html"><img src="img/Usina-oceanica.jpg" alt="oceânica"></a>
                     <h3>Energia oceânica</h3>
-                    <p>A energia eólica é um tipo de energia renovável gerada da força dos ventos. A estrutura em que
-                    ocorre a conversão da energia cinética em eletricidade é chamada de aerogerador ou turbina eólica.
-                    Trata-se de uma energia consideravelmente mais barata do que as demais, e que não gera emissão de
-                    poluentes.
+                    <p>
+                        A energia oceânica capta o potencial dos oceanos, convertendo marés e correntes em eletricidade, proporcionando uma fonte sustentável.
                     </p>
                 </div>
 
