--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <nav class="menu">
                 <ul>
-                    <li><a href="posts" class="button">Energias</a></li>
+                    <li><a href="#posts" class="button">Energias</a></li>
                     <!-- <li><a href="contact" class="button">Contato</a></li> -->
                     <li><a href="entrar.html" class="button">Login</a></li>
                 </ul>
