--- a/entrar.html
+++ b/entrar.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="css/entrar.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <!-- <div class="logo">
+                <a href="index.html"><img src="img/voltar.png"></a>
+            </div> -->
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html" class="button">Home</a></li>
+                </ul>
+            </nav>
+
+        </div>
+    </header>
+
     <div class="login">
         <div class="cadastro">
             <h2 class="titulo">Realize seu Login</h2>
@@ -20,7 +34,7 @@
                     type="password" required>
                 </div>
 
-                <div class="botao"><input type="submit" value="enviar"></div>
+                <div class="botao"><input type="submit" value="entrar"></div>
             </form>
         </div>
     </div>
