--- a/post1.html
+++ b/post1.html
@@ -44,7 +44,7 @@ A escalabilidade da energia solar também é notável. Desde pequenos sistemas d
 
 No entanto, desafios persistem, como a intermitência da luz solar devido às condições climáticas e à variação diurna. A necessidade de soluções de armazenamento eficazes e o desenvolvimento de tecnologias de armazenamento de energia são áreas de foco essenciais para otimizar a utilização da energia solar em larga escala.
 
-À medida que a transição para uma matriz energética mais sustentável ganha impulso, a energia solar está desempenhando um papel cada vez mais crucial. Investimentos contínuos em pesquisa e desenvolvimento, políticas de incentivo e uma abordagem integrada para a implementação de sistemas solares são fundamentais para acelerar essa transição e construir um futuro onde a luz do sol seja uma fonte primária e confiável de eletricidade limpa. </div>
+À medida que a transição para uma matriz energética mais sustentável ganha impulso, a energia solar está desempenhando um papel cada vez mais crucial. Investimentos contínuos em pesquisa e desenvolvimento, políticas de incentivo e uma abordagem integrada para a implementação de sistemas solares são fundamentais para acelerar essa transição e construir um futuro onde a luz do sol seja uma fonte primária e confiável de eletricidade limpa.</p> </div>
     </div>
 
     <!-- rodapé -->
