--- a/media.html
+++ b/media.html
@@ -1,36 +1,12 @@
-/*media query*/
-@media (max-width: 850px){
-    .footer-col{
-        width: 50%;
-        margin-bottom: 30px;
-    }
+<p class="texto">
+  A energia solar, uma das formas mais promissoras de energia renovável, utiliza a luz do sol para gerar eletricidade de maneira limpa e sustentável. Esse método inovador tem se destacado como uma alternativa crucial para reduzir a dependência de fontes não renováveis e mitigar os impactos ambientais associados.
 
-    .menu a {
-      padding: 11px;
-    }
+No coração da energia solar estão os painéis fotovoltaicos, dispositivos que convertem a luz solar em eletricidade por meio do efeito fotovoltaico. Cada painel é composto por células solares feitas de materiais semicondutores, como o silício, que absorvem fótons da luz solar. Quando os fótons atingem as células, eles liberam elétrons, gerando uma corrente elétrica que pode ser capturada e utilizada como energia elétrica.
 
-    .ordem{
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+A energia solar oferece uma série de benefícios ambientais, sendo uma fonte de energia renovável, abundante e amplamente distribuída. Além disso, a produção de eletricidade a partir da luz solar não emite gases de efeito estufa, contribuindo significativamente para a redução das emissões poluentes e para a luta contra as mudanças climáticas.
 
-    .ordem a:hover{
-      padding: 9px;
-    }
+A escalabilidade da energia solar também é notável. Desde pequenos sistemas de energia solar residencial até grandes parques solares comerciais, a tecnologia solar pode ser adaptada para atender a uma variedade de necessidades energéticas. Os avanços contínuos na eficiência dos painéis solares e a redução dos custos de instalação tornaram a energia solar uma opção mais acessível e atraente em muitas partes do mundo.
 
-    .blocos {
-      flex-direction: column;
-    }
-}
+No entanto, desafios persistem, como a intermitência da luz solar devido às condições climáticas e à variação diurna. A necessidade de soluções de armazenamento eficazes e o desenvolvimento de tecnologias de armazenamento de energia são áreas de foco essenciais para otimizar a utilização da energia solar em larga escala.
 
-@media (max-width: 600px){
-    .footer-col{
-        width: 100%;
-    }
-}
-@media (max-width: 1260px) {
-  .ordem p{
-    padding: 10px;
-  }
-}
+À medida que a transição para uma matriz energética mais sustentável ganha impulso, a energia solar está desempenhando um papel cada vez mais crucial. Investimentos contínuos em pesquisa e desenvolvimento, políticas de incentivo e uma abordagem integrada para a implementação de sistemas solares são fundamentais para acelerar essa transição e construir um futuro onde a luz do sol seja uma fonte primária e confiável de eletricidade limpa.</p>
