--- a/post2.html
+++ b/post2.html
@@ -33,20 +33,18 @@
             <h1 class="titulo">ENERGIA EÓLICA</h1>
 
             <div class="textoimg1">
-                <p class="texto">
+                <p class="paragrafos">A energia eólica é uma forma de geração de eletricidade que capitaliza a força do vento para produzir energia limpa e renovável. Essa fonte de energia tem ganhado destaque significativo nas últimas décadas devido à sua natureza sustentável e ao potencial para diversificar a matriz energética global, reduzindo a dependência de fontes não renováveis.</p>
 
-A energia eólica é uma forma de geração de eletricidade que capitaliza a força do vento para produzir energia limpa e renovável. Essa fonte de energia tem ganhado destaque significativo nas últimas décadas devido à sua natureza sustentável e ao potencial para diversificar a matriz energética global, reduzindo a dependência de fontes não renováveis.
+                <p class="paragrafos">A principal tecnologia por trás da energia eólica são os aerogeradores, estruturas elegantes que se erguem no horizonte e convertem a energia cinética do vento em eletricidade. As pás dos aerogeradores capturam a energia do vento, fazendo-as girar. Esse movimento é então transferido para um gerador, onde a energia mecânica é transformada em eletricidade.</p>
 
-A principal tecnologia por trás da energia eólica são os aerogeradores, estruturas elegantes que se erguem no horizonte e convertem a energia cinética do vento em eletricidade. As pás dos aerogeradores capturam a energia do vento, fazendo-as girar. Esse movimento é então transferido para um gerador, onde a energia mecânica é transformada em eletricidade.
+                <p class="paragrafos">Uma das grandes vantagens da energia eólica é sua contribuição para a redução das emissões de gases de efeito estufa. Ao contrário de fontes de energia baseadas em combustíveis fósseis, a geração de eletricidade por meio de aerogeradores não libera dióxido de enxofre, óxidos de nitrogênio ou dióxido de carbono na atmosfera. Isso não apenas mitiga os impactos negativos das mudanças climáticas, mas também ajuda a melhorar a qualidade do ar e a saúde pública.</p>
 
-Uma das grandes vantagens da energia eólica é sua contribuição para a redução das emissões de gases de efeito estufa. Ao contrário de fontes de energia baseadas em combustíveis fósseis, a geração de eletricidade por meio de aerogeradores não libera dióxido de enxofre, óxidos de nitrogênio ou dióxido de carbono na atmosfera. Isso não apenas mitiga os impactos negativos das mudanças climáticas, mas também ajuda a melhorar a qualidade do ar e a saúde pública.
+                <p class="paragrafos">Outro aspecto positivo da energia eólica é a sua capacidade de proporcionar uma fonte de eletricidade estável e previsível. Embora a intensidade do vento varie, as análises meteorológicas avançadas e o aprimoramento das tecnologias de controle de sistemas permitem prever padrões de vento, o que facilita o gerenciamento eficiente da produção de eletricidade.</p>
 
-Outro aspecto positivo da energia eólica é a sua capacidade de proporcionar uma fonte de eletricidade estável e previsível. Embora a intensidade do vento varie, as análises meteorológicas avançadas e o aprimoramento das tecnologias de controle de sistemas permitem prever padrões de vento, o que facilita o gerenciamento eficiente da produção de eletricidade.
+                <p class="paragrafos">No entanto, a energia eólica também enfrenta desafios. A localização geográfica é crucial, já que a viabilidade de projetos eólicos depende da presença de ventos consistentes. Além disso, a aceitação social e ambiental desempenha um papel vital, uma vez que a instalação de parques eólicos pode afetar a paisagem e a vida selvagem local.</p>
 
-No entanto, a energia eólica também enfrenta desafios. A localização geográfica é crucial, já que a viabilidade de projetos eólicos depende da presença de ventos consistentes. Além disso, a aceitação social e ambiental desempenha um papel vital, uma vez que a instalação de parques eólicos pode afetar a paisagem e a vida selvagem local.
-
-À medida que avançamos para um futuro mais sustentável, a energia eólica continuará desempenhando um papel crucial na transição para fontes de energia mais limpas e renováveis. Investimentos em pesquisa e desenvolvimento, juntamente com a implementação de políticas que incentivem o uso de energias renováveis, são essenciais para maximizar o potencial da energia eólica e contribuir para um planeta mais verde e sustentável
-                </div>
+                <p class="paragrafos">À medida que avançamos para um futuro mais sustentável, a energia eólica continuará desempenhando um papel crucial na transição para fontes de energia mais limpas e renováveis. Investimentos em pesquisa e desenvolvimento, juntamente com a implementação de políticas que incentivem o uso de energias renováveis, são essenciais para maximizar o potencial da energia eólica e contribuir para um planeta mais verde e sustentável.</p>
+            </div>
 
     <!-- rodapé -->
     <footer class="rodape">
