--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 <body>
     <!-- cabeçalho e menu -->
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="img/logo-escrita-1x4.svg">
-            </div>
 
-            <nav class="menu">
-                <ul>
-                    <li><a href="#posts" class="button">Energias</a></li>
-                    <li><a href="entrar.html" class="button">Login</a></li>
-                </ul>
-            </nav>
-
+        <div class="logo">
+            <img src="img/logo-escrita-1x4.svg">
         </div>
+
+        <nav class="menu">
+            <ul>
+                <li><a href="#posts" class="button">Energias</a></li>
+                <li><a href="entrar.html" class="button">Login</a></li>
+            </ul>
+        </nav>
+
+
     </header>
     <!-- fim -->
 
@@ -45,42 +45,48 @@
                 <div class="bloco-individual">
                     <a href="post1.html"><img src="img/solar4.webp" alt="solar"></a>
                     <h3>Energia solar</h3>
-                    <p>A energia solar aproveita a luz do sol para gerar eletricidade de maneira limpa e renovável, desempenhando um papel crucial na transição para fontes de energia.
+                    <p>A energia solar aproveita a luz do sol para gerar eletricidade de maneira limpa e renovável,
+                        desempenhando um papel crucial na transição para fontes de energia.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post2.html"><img src="img/eolica3.jpg" alt="eolica"></a>
                     <h3>Energia eólica</h3>
-                    <p>A energia eólica converte a força do vento em eletricidade, oferecendo uma fonte limpa e renovável para suprir as necessidades energéticas.
+                    <p>A energia eólica converte a força do vento em eletricidade, oferecendo uma fonte limpa e
+                        renovável para suprir as necessidades energéticas.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post3.html"><img src="img/hidreletrica.webp" alt="hidráulica"></a>
                     <h3>Energia hidráulica</h3>
-                    <p>A energia hidráulica utiliza a força da água em movimento para gerar eletricidade, representando uma fonte renovável e sustentável.
+                    <p>A energia hidráulica utiliza a força da água em movimento para gerar eletricidade, representando
+                        uma fonte renovável e sustentável.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post4.html"><img src="img/Biomassa-1.jpg" alt="biomassa"></a>
                     <h3>Biomassa</h3>
-                    <p>A biomassa converte resíduos orgânicos em energia, oferecendo uma fonte sustentável e renovável para a produção de eletricidade e biocombustíveis.
+                    <p>A biomassa converte resíduos orgânicos em energia, oferecendo uma fonte sustentável e renovável
+                        para a produção de eletricidade e biocombustíveis.
                     </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post5.html"><img src="img/geotermica.webp" alt="geotérmica"></a>
                     <h3>Energia geotérmica</h3>
-                    <p>A energia geotérmica utiliza o calor interno da Terra para gerar eletricidade, proporcionando uma fonte limpa e renovável.  </p>
+                    <p>A energia geotérmica utiliza o calor interno da Terra para gerar eletricidade, proporcionando uma
+                        fonte limpa e renovável. </p>
                 </div>
 
                 <div class="bloco-individual">
                     <a href="post6.html"><img src="img/Usina-oceanica.jpg" alt="oceânica"></a>
                     <h3>Energia oceânica</h3>
                     <p>
-                        A energia oceânica capta o potencial dos oceanos, convertendo marés e correntes em eletricidade, proporcionando uma fonte sustentável.
+                        A energia oceânica capta o potencial dos oceanos, convertendo marés e correntes em eletricidade,
+                        proporcionando uma fonte sustentável.
                     </p>
                 </div>
 
@@ -100,7 +106,8 @@
             <h4 class="titulo">Sobre nós</h4>
             <p>
                 Nós da Clean Planet somos um site que preza pelo bem-estar do nosso planeta, por isso, trazemos
-                informações sobre energias renováveis. Queremos fazer com que todos se consientizem do que nosso planeta precisa, especificamente pela nossa principal fonte de sobrevivência: a ENERGIA.
+                informações sobre energias renováveis. Queremos fazer com que todos se consientizem do que nosso planeta
+                precisa, especificamente pela nossa principal fonte de sobrevivência: a ENERGIA.
             </p>
         </div>
     </section>
